jakieś przenosiny i jakiś progres (albo regres)